# GreenMPC_VAIC

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  fly.toml  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
backend/: __init__.py  dependencies.py  investment_jobs.py  main.py  schemas.py  services.py  session_store.py
configs/: data_sources.yaml  dataset_build.yaml  demo.yaml  evaluation.yaml  forecasting.yaml  investment.yaml  mpc.yaml  selected_profiles.yaml
docs/: ARCHITECTURE.md  CLOSED_LOOP_EVALUATION.md  CONTROL_ROOM.md  DATA_SOURCES.md  DATA_STRATEGY.md  DIGITAL_TWIN.md  ENERGY_ACCOUNTING.md  EVENT_MODEL.md  FORECASTING.md  FORECAST_EVALUATION.md  FORECAST_FEATURES.md  HYBRID_DATASET.md  INVESTMENT_LAB.md  MODEL_REGISTRY.md  MPC_API.md  MPC_FORMULATION.md  MPC_INPUTS.md  MPC_SAFETY.md  PROFILE_SELECTION.md  PROJECT_SCOPE.md  PV_DERIVATION.md  SIMULATOR_API.md  STAGE_PLAN.md  TIME_ALIGNMENT.md  WEB_COMMAND_CENTER.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: acquire_public_data.py  audit_forecast_baselines.py  build_hybrid_dataset.py  evaluate_forecasters.py  run_closed_loop_benchmark.py  run_command_center.py  run_digital_twin_smoke.py  run_forecast_example.py  run_mpc_diagnostic.py  run_mpc_example.py  smoke_fresh_clone.py  train_forecasters.py  verify_runtime_assets.py  verify_stage0.py  verify_stage1.py  verify_stage2.py  verify_stage3.py  verify_stage4.py  verify_stage5.py  verify_stage6.py  verify_stage7.py  verify_stage8.py  verify_web_control_room.py
tests/: _forecasting_helpers.py  (+53 more)
(+158 files in other folders)
