[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "greenmpc-twin"
version = "0.1.0"
description = "Offline-capable AI energy digital twin foundation for industrial-park renewable-energy management."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
  { name = "GreenMPC Twin Team" }
]
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "cvxpy",
  "highspy",
  "streamlit",
  "plotly",
  "pyyaml",
  "joblib",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
